dir "res/layout/" src "activity_main.xml"     Removed TextView and replaced with ImageView (Vectors) dir "java/com.example.diceroller/" src "MainActivity.kt"     - Removed TextView variable "resultText" and import     - Removed Toast Screen display and import     - Replaced the textResult : TextView with     - diceImage : ImageView that holds an #id "dice_image"       that will has the layout of the dice image to beb       displayed.     - Added Kotlin switch statement that chooses the       appropiate dice vector (ImageView) based on the       random number and then set the image resource for       displaying purposes.
      Modulirized into more function with specific
      functionalities:
      - rollDice() : int
      - SetDiceImageViewResource(Int, ImageView) : void

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Dice Roller</string>
-    <string name="roll">Roll</string>
+    <string name="image_descrition">Dice Vector Image</string>
+    <string name="text_roll">Roll</string>
+    <string name="text_letsRoll">Let\'s Roll!</string>
 </resources>
